# django-sharding

./: README.md
package/: MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
package/django-sharding/sharding/: admin_customizations.py  customizations.py  fields.py  forms.py  multidbquery.py  related_descriptors.py  utils.py
package/django-sharding/sharding/fixtures/: user.json
package/django-sharding/sharding/management/commands/: load_shard_dbs.py
package/django-sharding/sharding/querysetsequence/: __init__.py
src/: accounts_1-primary.sqlite3  accounts_2-primary.sqlite3  default.sqlite3  product_1-primary.sqlite3  product_2-primary.sqlite3  product_3-primary.sqlite3  profile_1-primary.sqlite3  profile_2-primary.sqlite3  shop_1-primary.sqlite3  shop_2-primary.sqlite3  store_1-primary.sqlite3  store_2-primary.sqlite3
src/accounts/: admin.py  forms.py  models.py  router.py
src/accounts/migrations/: 0001_initial.py  0002_auto_20200508_1220.py  0002_profile.py  0003_auto_20200505_1230.py  0004_auto_20200505_1233.py  0005_auto_20200505_1253.py
src/core/: asgi.py  settings.py  urls.py  wsgi.py
src/sharding/: admin.py  admin_customizations.py  customizations.py  fields.py  forms.py  models.py  multidbquery.py  multidbqueryset.py  related_descriptors.py  router.py  utils.py
src/sharding/fixtures/: user.json
src/sharding/migrations/: 0001_initial.py
src/sharding/querysetsequence/: __init__.py
src/shop/: admin.py  forms.py  router.py  urls.py  views.py
src/shop/migrations/: 0001_initial.py  0002_auto_20200429_1409.py  0002_remove_store_products.py  (+10 more)
(+4 files in other folders)
