[metadata]
name = django-sharding
version = 0.1
description = A Django app to sharding databases.
long_description = file: README.rst
url = https://www.jawlatte.com/
download_url = https://github.com/Fethienv/django-sharding/blob/master/package/dist/django-sharding-0.1.tar.gz
author = Fethi BEN ABDELHAMID
author_email = fethi.env@gmail.com.com
license = FREE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0 
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: